Events Site Complete!

--- a/events_app/templates/event_detail.html
+++ b/events_app/templates/event_detail.html
@@ -65,6 +65,7 @@
     <li><a href="/guest/2">Dani</a></li>
     <li><a href="/guest/3">Jordan</a></li>
     <li><a href="/guest/4">Ducky</a></li>
+    <li><a href="/guest/5">Ducky</a></li>
 </ul>
 
 {% endblock %}
