--- a/events_app/templates/guest_detail.html
+++ b/events_app/templates/guest_detail.html
@@ -19,6 +19,7 @@
 <ul>
     <li><a href="/event/1">Zoom Party!</a></li>
     <li><a href="/event/2">Picnic in the Park</a></li>
+    <li><a href="/event/3">Picnic in the Park</a></li>
 </ul>
 
 {% endblock %}
